WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17834
REGRESSION: floated first-letter does not work when included in table
https://bugs.webkit.org/show_bug.cgi?id=17834
Summary
REGRESSION: floated first-letter does not work when included in table
Remi Nodet
Reported
2008-03-13 13:21:23 PDT
See attached html file. Works in Safari 3 but not in nightly build.
Attachments
Show case of the bug
(590 bytes, text/html)
2008-03-13 13:21 PDT
,
Remi Nodet
no flags
Details
Recognize existing floating first-letters
(32.55 KB, patch)
2008-03-13 16:31 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
Patch
(5.08 KB, patch)
2019-08-13 13:29 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Remi Nodet
Comment 1
2008-03-13 13:21:47 PDT
Created
attachment 19742
[details]
Show case of the bug
Robert Blaut
Comment 2
2008-03-13 13:35:05 PDT
Worth to say that the bug is also float depended. Confirmed in the latest Webkit
r31030
.
mitz
Comment 3
2008-03-13 16:31:42 PDT
Created
attachment 19747
[details]
Recognize existing floating first-letters
Darin Adler
Comment 4
2008-03-14 13:13:44 PDT
Comment on
attachment 19747
[details]
Recognize existing floating first-letters r=me
mitz
Comment 5
2008-03-14 13:34:40 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/31065
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug