WebCore:

Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17834
          REGRESSION: floated first-letter does not work when included in table

        Test: fast/css/first-letter-float.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::updateFirstLetter): Changed the search for the
        first text node to stop at a float if that float is an existing first-
        letter.

LayoutTests:

        Reviewed by Darin Adler.

        - test for http://bugs.webkit.org/show_bug.cgi?id=17834
          REGRESSION: floated first-letter does not work when included in table

        * fast/css/first-letter-float.html: Added.
        * platform/mac-leopard/fast/css/first-letter-float-expected.checksum: Added.
        * platform/mac-leopard/fast/css/first-letter-float-expected.png: Added.
        * platform/mac/fast/css/first-letter-float-expected.txt: Added.



Canonical link: https://commits.webkit.org/24748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31065 268f45cc-cd09-0410-ab3c-d52691b4dbfc