WebCore/rendering/RenderBlock.cpp
@@ -4085,9 +4085,11 @@ void RenderBlock::updateFirstLetter()
     // Drill into inlines looking for our first text child.
     RenderObject* currChild = firstLetterBlock->firstChild();
     while (currChild && currChild->needsLayout() && (!currChild->isReplaced() || currChild->isFloatingOrPositioned()) && !currChild->isText()) {
-        if (currChild->isFloatingOrPositioned())
+        if (currChild->isFloatingOrPositioned()) {
+            if (currChild->style()->styleType() == RenderStyle::FIRST_LETTER)
+                break;
             currChild = currChild->nextSibling();
-        else
+        } else
             currChild = currChild->firstChild();
     }
 
